--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,26 @@ manage.py
 
 # example database
 drf_example
+
+# dependencies
+/node_modules
+huddleupui/node_modules/
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
