--- a/huddleupui/public/manifest.json
+++ b/huddleupui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HuddleUp",
+  "name": "HuddleUp",
   "icons": [
     {
       "src": "favicon.ico",
