feat: add invitations

--- a/huddleupui/public/manifest.json
+++ b/huddleupui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HuddleUp",
-  "name": "HuddleUp",
+  "short_name": "huddleup",
+  "name": "huddleup",
   "icons": [
     {
       "src": "favicon.ico",
