fix: add headers to nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,25 @@
 upstream huddleupapi {
-    server huddleupapi:8000;
+	server huddleupapi:8000;
 }
 
 server {
-    listen 80;
+	listen 80;
 
-    location /api/ {
-        proxy_pass http://huddleupapi;
-    }
+	location /api/ {
+		proxy_pass http://huddleupapi;
+	}
 
-    location /static/rest_framework/ {
-        root /static/;
-    }
+	location /static/rest_framework/ {
+		root /static/;
+	}
 
-    location / {
-        root /var/www/huddleupui;
-        try_files $uri $uri/ /index.html;
-    }
+	location / {
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+	
+
+		root /var/www/huddleupui;
+		try_files $uri $uri/ /index.html;
+	}
 }
