fix: cors add headers

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,10 +6,18 @@ server {
 	listen 80;
 
 	location /api/ {
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+
 		proxy_pass http://huddleupapi;
 	}
 
 	location /static/rest_framework/ {
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+
 		root /static/;
 	}
 
@@ -17,7 +25,7 @@ server {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
-	
+
 
 		root /var/www/huddleupui;
 		try_files $uri $uri/ /index.html;
