fix: update nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ server {
 	location /api/ {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
 
 		proxy_pass http://huddleupapi;
 	}
@@ -16,7 +16,7 @@ server {
 	location /static/rest_framework/ {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
 
 		root /static/;
 	}
@@ -24,7 +24,7 @@ server {
 	location / {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
 
 
 		root /var/www/huddleupui;
