--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,7 @@ server {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
 
 		proxy_pass http://huddleupapi;
 	}
@@ -17,6 +18,7 @@ server {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
 
 		root /static/;
 	}
@@ -25,6 +27,7 @@ server {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
 
 
 		root /var/www/huddleupui;
