refactor: add certbot

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,9 @@ upstream huddleupapi {
 server {
 	listen 80;
 
+	 server_name huddleup.space www.huddleup.space;
+    server_tokens off;
+
 	location /api/ {
 		add_header "Access-Control-Allow-Origin" "*" always;
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
@@ -22,6 +25,10 @@ server {
 
 		root /static/;
 	}
+
+	location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
 	location / {
 		add_header "Access-Control-Allow-Origin" "*" always;
