--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,11 @@ services:
     depends_on:
       - huddleupapi
       - huddleupui
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
   static:
