--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,67 +1,47 @@
-# HTTP server block for redirection to HTTPS
-server {
-    listen 80;
-    server_name huddleup.space www.huddleup.space;
-
-    # Redirect all HTTP traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+upstream huddleupapi {
+	server huddleupapi:8000;
 }
 
-# HTTPS server block for serving content securely
 server {
-    listen 443 ssl;
-    server_name huddleup.space www.huddleup.space;
+	listen 80;
 
-    # SSL/TLS configuration
-    ssl_certificate /path/to/your/ssl_certificate.crt;
-    ssl_certificate_key /path/to/your/ssl_certificate_key.key;
+	server_name huddleup.space www.huddleup.space;
+    server_tokens off;
 
-    # Enable SSL session caching for improved performance
-    ssl_session_cache shared:SSL:10m;
+	location /api/ {
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
 
-    # Additional SSL configurations can be added here, like SSL protocols and ciphers
+		proxy_pass http://huddleupapi;
+	}
 
-    # CORS headers configuration
-    location /api/ {
-        add_header "Access-Control-Allow-Origin" "*" always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Accept, Content-Type, Origin, X-Dub-Session-Token';
-        add_header 'Access-Control-Allow-Private-Network' 'true';
+	location /static/rest_framework/ {
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
 
-        proxy_pass http://huddleupapi;
-    }
+		root /static/;
+	}
 
-    location /static/rest_framework/ {
-        add_header "Access-Control-Allow-Origin" "*" always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Accept, Content-Type, Origin, X-Dub-Session-Token';
-        add_header 'Access-Control-Allow-Private-Network' 'true';
-
-        root /var/www/static/;
-    }
-
-    # Serve frontend application
-    location / {
-        add_header "Access-Control-Allow-Origin" "*" always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Accept, Content-Type, Origin, X-Dub-Session-Token';
-        add_header 'Access-Control-Allow-Private-Network' 'true';
-
-        root /var/www/huddleupui;
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Let's Encrypt challenge directory
-    location /.well-known/acme-challenge/ {
+	location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Error pages configuration (customize as needed)
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /var/www/errors;
+	#location / {
+	#	add_header "Access-Control-Allow-Origin" "*" always;
+	#	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+	#	add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+	#	add_header 'Access-Control-Allow-Private-Network' 'true';
+#
+#
+	#	root /var/www/huddleupui;
+	#	try_files $uri $uri/ /index.html;
+	# }
+
+	location / {
+        return 301 https://huddleup.space$request_uri;
     }
 }
