fix: default conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,7 @@ upstream huddleupapi {
 
 server {
 	listen 80;
+	listen [::]:80;
 
 	server_name huddleup.space www.huddleup.space;
     server_tokens off;
