--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,11 +18,15 @@ services:
   nginx:
     build:
       context: ./nginx
+    restart: always
     volumes:
       - static:/static
       - huddleupui:/var/www/huddleupui
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www/:/var/www/certbot/:ro
     ports:
-      - "80:80"
+      - 80:80
+      - 443:443
     depends_on:
       - huddleupapi
       - huddleupui
