fix: try different domain

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -43,6 +43,6 @@ server {
 	# }
 
 	location / {
-        return 301 https://huddleup.space$request_uri;
+        return 301 https://huddleup.spaces$request_uri;
     }
 }
