--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,7 +40,7 @@ server {
 	# }
 
 	location / {
-        return 301 https://huddleup.spaces$request_uri;
+        return 301 https://huddleup.space$request_uri;
     }
 
 	location /.well-known/acme-challenge/ {
