fix: remove redirect

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,21 +27,16 @@ server {
 		root /static/;
 	}
 
-
-	#location / {
-	#	add_header "Access-Control-Allow-Origin" "*" always;
-	#	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-	#	add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
-	#	add_header 'Access-Control-Allow-Private-Network' 'true';
-#
-#
-	#	root /var/www/huddleupui;
-	#	try_files $uri $uri/ /index.html;
-	# }
-
 	location / {
-        return 301 https://huddleup.space$request_uri;
-    }
+		add_header "Access-Control-Allow-Origin" "*" always;
+		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
+		add_header 'Access-Control-Allow-Private-Network' 'true';
+
+
+		root /var/www/huddleupui;
+		try_files $uri $uri/ /index.html;
+	 }
 
 	location /.well-known/acme-challenge/ {
         root /var/www/certbot;
