fix: use ssl certificates

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,45 +1,59 @@
 upstream huddleupapi {
-	server huddleupapi:8000;
+    server huddleupapi:8000;
 }
 
 server {
-	listen 80;
-	listen [::]:80;
+    listen 80;
+    listen [::]:80;
+    server_name huddleup.space www.huddleup.space;
 
-	server_name huddleup.space www.huddleup.space;
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name huddleup.space www.huddleup.space;
+
+    # SSL certificate paths
+    ssl_certificate /etc/letsencrypt/live/huddleup.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/huddleup.space/privkey.pem;
+
+    # Disable server tokens for security
     server_tokens off;
 
-	location /api/ {
-		add_header "Access-Control-Allow-Origin" "*" always;
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
-		add_header 'Access-Control-Allow-Private-Network' 'true';
+    location /api/ {
+        # API specific headers
+        add_header "Access-Control-Allow-Origin" "*" always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type,Origin,X-Dub-Session-Token';
+        add_header 'Access-Control-Allow-Private-Network' 'true';
 
-		proxy_pass http://huddleupapi;
-	}
-
-	location /static/rest_framework/ {
-		add_header "Access-Control-Allow-Origin" "*" always;
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
-		add_header 'Access-Control-Allow-Private-Network' 'true';
-
-		root /static/;
-	}
-
-	location / {
-		add_header "Access-Control-Allow-Origin" "*" always;
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-		add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin, X-Dub-Session-Token';
-		add_header 'Access-Control-Allow-Private-Network' 'true';
-
-
-		root /var/www/huddleupui;
-		try_files $uri $uri/ /index.html;
-	 }
-
-	location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        # Proxy pass to upstream server
+        proxy_pass http://huddleupapi;
     }
 
+    location /static/rest_framework/ {
+        # Static resources specific headers
+        add_header "Access-Control-Allow-Origin" "*" always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type,Origin,X-Dub-Session-Token';
+        add_header 'Access-Control-Allow-Private-Network' 'true';
+
+        # Serve static files from specified root directory
+        root /static/;
+    }
+
+    location / {
+        # Default location specific headers
+        add_header "Access-Control-Allow-Origin" "*" always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type,Origin,X-Dub-Session-Token';
+        add_header 'Access-Control-Allow-Private-Network' 'true';
+
+        # Serve static files or redirect to index.html for SPA
+        root /var/www/huddleupui;
+        try_files $uri $uri/ /index.html;
+    }
 }
