refactor: change proxy pass

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,7 +31,7 @@ server {
         add_header 'Access-Control-Allow-Private-Network' 'true';
 
         # Proxy pass to upstream server
-        proxy_pass https://127.0.0.1:8000;
+        proxy_pass http://localhost:8000;
     }
 
     location /static/rest_framework/ {
