fix: change proxy pass

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,7 +31,7 @@ server {
         add_header 'Access-Control-Allow-Private-Network' 'true';
 
         # Proxy pass to upstream server
-        proxy_pass http://0.0.0.0:8000;
+        proxy_pass http://huddleupapi;
     }
 
     location /static/rest_framework/ {
