--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,12 @@ services:
       context: ./huddleupapi
     ports:
       - "8000:8000"
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
   huddleupui:
     build:
       context: ./huddleupui
