--- a/huddleupAPI/Dockerfile
+++ b/huddleupAPI/Dockerfile
@@ -1,14 +1,23 @@
-FROM python:3.9-slim
+# Use the official Python image as base
+FROM python:3.9
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 # Set the working directory in the container
-RUN pip install --upgrade pip
+WORKDIR /code
 
-# Copy the dependencies file to the working directory
-COPY requirements.txt .
+# Copy the requirements file and install dependencies
+COPY requirements.txt /code/
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-COPY . /app
-WORKDIR /app
+# Copy the Django project into the container
+COPY . /code/
 
-COPY ./entrypoint.sh .
-ENTRYPOINT ["sh", "/app/entrypoint.sh"]
+# Expose the Django service port
+EXPOSE 8000
+
+# Command to run the Django development server
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
