--- a/huddleupui/Dockerfile
+++ b/huddleupui/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:21-alpine as builder
 WORKDIR /app
-COPY package*.json .
+COPY package.json .
 COPY yarn*.lock .
 RUN yarn install
 COPY . .
