--- a/huddleupui/Dockerfile
+++ b/huddleupui/Dockerfile
@@ -1,6 +1,9 @@
 FROM node:21-alpine as builder
 WORKDIR /app
 COPY package.json .
+
+RUN npm install yarn -g
+
 COPY yarn*.lock .
 RUN yarn install
 COPY . .
