--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./huddleupui:/app
+      - ./app/:/app/
     depends_on:
       - backend
