--- a/huddleupui/Dockerfile
+++ b/huddleupui/Dockerfile
@@ -3,9 +3,6 @@ FROM node:alpine
 # set working directory
 WORKDIR /app
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
 # install app dependencies
 COPY package.json ./
 RUN npm install
@@ -14,4 +11,4 @@ RUN npm install
 COPY . ./
 
 # start app
-CMD ["npm", "start"]
+CMD ["tail","-F","Something"]
