fix: change volumes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./app/:/app/
+      - ./huddleupui:/app
+      - ./app/node_modules
     depends_on:
       - backend
