--- a/huddleupAPI/Dockerfile
+++ b/huddleupAPI/Dockerfile
@@ -1,10 +1,6 @@
 # Use the official Python image as base
 FROM python:3.9
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
 # Set the working directory in the container
 WORKDIR /code
 
@@ -20,4 +16,4 @@ COPY . /code/
 EXPOSE 8000
 
 # Command to run the Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "huddleupAPI.wsgi:application", "--bind", "0.0.0.0:8000"]
