--- a/huddleupui/Dockerfile
+++ b/huddleupui/Dockerfile
@@ -3,6 +3,4 @@ FROM node:21-alpine
 WORKDIR /app
 COPY . .
 
-RUN npm install
-
-CMD ["npm", "run",  "start"]
+CMD [ "sh", "-c", "npm install && npm run start" ]
