--- a/huddleupui/package.json
+++ b/huddleupui/package.json
@@ -2,6 +2,7 @@
 	"name": "huddleupui",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "http://localhost:8000",
 	"dependencies": {
 		"@ant-design/compatible": "^5.1.2",
 		"@ant-design/icons": "^5.2.6",
