--- a/huddleupAPI/requirements.txt
+++ b/huddleupAPI/requirements.txt
@@ -16,7 +16,6 @@ django-appconf==1.0.6
 django-cors-headers==4.3.1
 django-cryptography==1.1
 djangorestframework==3.15.1
-djongo==1.3.6
 dnspython==2.6.1
 docopt==0.6.2
 executing==2.0.1
@@ -70,3 +69,5 @@ wcwidth==0.2.13
 webencodings==0.5.1
 yarg==0.1.9
 zipp==3.18.1
+Pillow
+psycopg[binary]
