Mongo to postgres (#49)
* reverting commits from dev

* switching from mongo to postgresql

* adding migrations

* Add port mapping to docker compose file for frontend

* react files are built and added as static files to nginx container for easy deployment

---------

Co-authored-by: DorukBu <dorukbuyukyildirim@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ huddleupui/node_modules/
 
 # misc
 .DS_Store
+.db.env
 .env
 .env.local
 .env.development.local
@@ -75,3 +76,6 @@ huddleupui/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+postgres_data/
+staticfiles/
+mediafiles/
