--- a/huddleupui/nginx/huddleup.conf
+++ b/huddleupui/nginx/huddleup.conf
@@ -27,11 +27,11 @@ server {
 
 
     location /staticfiles/ {
-        alias /app/staticfiles/;
+        alias /staticfiles/;
     }
 
     location /media/ {
-        alias /app/mediafiles/;
+        alias /mediafiles/;
     }
 
     client_max_body_size 50M;
