--- a/huddleupui/Dockerfile-dev
+++ b/huddleupui/Dockerfile-dev
@@ -1,6 +1,13 @@
 FROM node:21-alpine
 
-WORKDIR /app
+WORKDIR /dev-app
+
+COPY package*.json ./
+
+RUN npm install
+
 COPY . .
 
-CMD [ "sh", "-c", "npm install && npm run start" ]
+EXPOSE 3000
+
+CMD ["npm", "start"]
