--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -6,7 +6,7 @@ on:
       - feature/ci-pipeline-unit-tests
 
 jobs:
-  build:
+  ci-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +18,9 @@ jobs:
         set -a
         source ./.env.sample
         set +a
+
+    - name: Install dependencies
+      run: pip install -r ./huddleupAPI/requirements.txt
 
     - name: Run tests
       run: |
