--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -20,10 +20,10 @@ jobs:
     #     set +a
     #     echo "Loaded ALLOWED_HOSTS: $ALLOWED_HOSTS"  # Test to verify variables are set
 
-    - name: Load .env.sample for testing
-      uses: falti/dotenv-action@v1
+    - name: Load .env file
+      uses: xom9ikk/dotenv@v2.3.0
       with:
-        path: './.env.sample'
+        path: ./.env.sample
 
     - name: Verify environment variables
       run: |
