--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -11,6 +11,8 @@ services:
       - ./huddleupAPI:/app
     expose:
       - 8000
+    ports:
+        - "8000:8000"
     env_file:
       - .env
     depends_on:
