--- a/huddleupui/package.json
+++ b/huddleupui/package.json
@@ -10,8 +10,10 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"antd": "^5.9.0",
+		"axios": "^1.7.7",
 		"crypto-js": "^4.1.1",
 		"js-cookie": "^3.0.5",
+		"lodash": "^4.17.21",
 		"luxon": "^3.4.3",
 		"react": "^18.2.0",
 		"react-audio-player": "^0.17.0",
