Add directory change before API unit tests

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -24,4 +24,5 @@ jobs:
 
     - name: Run tests
       run: |
-        python ./huddleupAPI/manage.py test
+        cd huddleupAPI
+        python manage.py test
