Fix ssh step take 1

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,11 +45,12 @@ jobs:
           fi
 
           ssh -o StrictHostKeyChecking=no -p $SSH_PORT $SSH_USER@$SSH_HOST "
-            cd $PROJECT_PATH &&
-            docker-compose -f docker-compose.yaml -p $BRANCH_NAME down &&
-            git pull origin $BRANCH_NAME &&
-            if [ "$BRANCH_NAME" == "dev" ]; then \
-              sed -i 's/127.0.0.1:8080:80/127.0.0.1:8081:80/' docker-compose.yaml \
-            fi &&
-            docker-compose -f docker-compose.yaml -p $BRANCH_NAME up --build -d
+            export BRANCH_NAME=$BRANCH_NAME; \
+            cd $DEPLOY_PATH; \
+            docker-compose -f docker-compose.yaml -p \$BRANCH_NAME down; \
+            git pull origin \$BRANCH_NAME; \
+            if [ \"\$BRANCH_NAME\" == \"dev\" ]; then \
+              sed -i 's/127.0.0.1:8080:80/127.0.0.1:8081:80/' docker-compose.yaml; \
+            fi; \
+            docker-compose -f docker-compose.yaml -p \$BRANCH_NAME up --build -d
           "
