fix: environment variables are not read

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     expose:
       - 8000
     env_file:
-      - .env
+      - huddleupAPI/.env
     depends_on:
       - db
     restart: unless-stopped
