--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,15 +6,17 @@ services:
   backend:
     build:
       context: ./huddleupAPI
+      dockerfile: Dockerfile-dev
     container_name: backend_huddleup
     volumes:
       - ./huddleupAPI:/app
+    command: "sh -c 'python manage.py setup && python manage.py collectstatic --noinput && gunicorn huddleupAPI.wsgi'"
     expose:
       - 8000
     ports:
         - "8000:8000"
     env_file:
-      - .env
+      - huddleupAPI/.env
     depends_on:
       - db
     restart: unless-stopped
