--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,11 +10,11 @@ services:
     container_name: backend_huddleup
     volumes:
       - ./huddleupAPI:/app
-    command: "sh -c 'python manage.py setup && python manage.py collectstatic --noinput && gunicorn huddleupAPI.wsgi'"
+    command: "sh -c 'python manage.py setup && python manage.py runserver 0.0.0.0:8000'"
     expose:
       - 8000
     ports:
-        - "8000:8000"
+      - "8000:8000"
     env_file:
       - huddleupAPI/.env
     depends_on:
