--- a/huddleupui/package.json
+++ b/huddleupui/package.json
@@ -4,15 +4,18 @@
 	"private": true,
 	"proxy": "http://backend:8000",
 	"dependencies": {
+		"-": "^0.0.1",
 		"@ant-design/compatible": "^5.1.2",
 		"@ant-design/icons": "^5.2.6",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/leaflet": "^1.9.14",
 		"antd": "^5.9.0",
 		"axios": "^1.7.7",
 		"crypto-js": "^4.1.1",
 		"js-cookie": "^3.0.5",
+		"leaflet": "^1.9.4",
 		"lodash": "^4.17.21",
 		"luxon": "^3.4.3",
 		"react": "^18.2.0",
@@ -20,9 +23,11 @@
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
 		"react-jwt": "^1.2.0",
+		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-use-scroll-position": "^2.0.0",
+		"save": "^2.9.0",
 		"uuid4": "^2.0.3",
 		"web-vitals": "^2.1.4"
 	},
